update other show list

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<p>I’m Waha Li, a software developer.</p>
 						<p>I’m passionate about building things with code. I'd gain great pleasure if it can be widely approved. I also love try novelty things, technologies and skills which can bring new advanture to my life.
 						</p>
-						<p>In my student career, I was student major in electrical engineering and mechanical engineering. And I am currently a master student of Lehigh University in Computer Science. My experience is helping me to know well about this world.</p>
+						<p>I was student majoring in electrical engineering and mechanical engineering. And I am currently a master student of Computer Science in Lehigh University, seeking for a software developer job.</p>
 					</div>
 					<div class="col-xs-12 col-sm-4 text-primary">
 						<h3>Technical Skills:</h3>
