--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		.circle {
     width: 250px;
     box-shadow: -1px 6px 36px 0 rgba(0, 0, 0, 0.75);
+        margin-top: 10%;
 }
 	.about{
 		margin-bottom: 20px;
