fix grammar error

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 			<header id="feature" class="col-md-12 featured-header">
 				<button id="fe-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-king"></i>My Projects</button>
 				<button id="fs-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-queen"></i>Paper and Patents</button>
-				<button id="aw-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-pawn"></i>Competition</button>
-				<button id="og-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-bishop"></i>Organization</button>
+				<button id="aw-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-pawn"></i>Prizes</button>
+				<button id="og-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-bishop"></i>Organizations</button>
 				<button id="mw-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-knight"></i>Design works</button>
 				<button id="ce-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-tower"></i>Certificates</button>
 			</header>
