--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
 					<li class="menu-item"><i class="glyphicon glyphicon-phone"></i> Contact
 					</li>
 				</a>
+				<a href="https://www.linkedin.com/in/waha-li-a5b26a111/" target="_blank">
+					<li class="menu-item"><i class="ion-social-linkedin"></i> Linkedin</li>
+				</a>
+				<a href="https://github.com/gitlwh" target="_blank">
+					<li class="menu-item"><i class="ion-social-github"></i> Github</li>
+				</a>
+				
 				<a href="https://waha.blog/" target="_blank">
 					<li class="menu-item"><i class="glyphicon glyphicon-book"></i> Blog</li>
 				</a>
