update new content after half semester and before getting a job

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<h4 class="title-font text-center">Software/Full Stack Developer in Training</h4>
 				<div class="row">
 					<figure class="col-xs-12 col-sm-4 text-center">
-						<img class="img-responsive center-block circle" src="dist/images/headshot.png" alt="my profile picture">
+						<img class="img-responsive center-block circle" src="dist/images/headshot.jpg" alt="my profile picture">
 						<figcaption></figcaption>
 					</figure>
 					<div class="col-xs-12 col-sm-4 text-primary">
@@ -98,13 +98,13 @@
 						<p>I’m Waha Li, a software developer.</p>
 						<p>I’m passionate about building things with code. I'd gain great pleasure if it can be widely approved. I also love try novelty things, technologies and skills which can bring new advanture to my life.
 						</p>
-						<p>I was student majoring in electrical engineering and mechanical engineering. And I am currently a master student of Computer Science in Lehigh University, seeking for a software developer job.</p>
+						<p>I was student majoring in electrical and mechanical engineering so I can use a more comprehensive and innovative idea to solve most engineer problems. I am currently a master student of Computer Science in Lehigh University, seeking for a software developer job.</p>
 					</div>
 					<div class="col-xs-12 col-sm-4 text-primary">
 						<h3>Technical Skills:</h3>
-						<p><strong>Languages</strong>: Java, Python, C/C++, JavaScript, HTML5, CSS3, Ruby, Perl, PHP, MySQL, Shell, Matlab, Verilog, Assembly Language.</p>
+						<p><strong>Languages</strong>: Java, Python, C/C++, JavaScript, HTML5, CSS3, PHP, MySQL, Scala, Shell, Matlab, Ruby, Perl, Verilog, Assembly Language.</p>
 						<p><strong>Web Frameworks/Libraries</strong>:AngularJS, BackboneJS, jQuery, Bootstrap, Firebase, Gulp, Wordpress, Codeigniter, NodeJS.</p>
-						<p><strong>Data mining</strong>:Numpy, Scipy, Pandas, Xgboost, Sklearn, Vowpal Wabbit.</p>
+						<p><strong>Machine learning</strong>:Tensorflow, Keras, Scikit learn, Xgboost, Vowpal Wabbit, Modern neural network, Numpy, Scipy, Pandas.</p>
 						<p><strong>Others</strong>:Apache, AWS, Wire Shark, Photoshop, Premiere Pro, Lightroom, After Effects.</p>
 
 					</div>
@@ -122,6 +122,7 @@
 				<button id="mw-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-knight"></i>Design works</button>
 				<button id="ce-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-tower"></i>Certificates</button>
 				<button id="mv-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-cd"></i>Movies</button>
+				<!--button id="hb-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-heart"></i>Hobbies</button-->
 			</header>
 		</section>
 		<script id="project-template" type="text-template">
