divide four kinds

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 					</div>
 					<div class="col-xs-12 col-sm-4 text-primary">
 						<h3>Technical Skills:</h3>
-						<p><strong>Languages</strong>: Java, Python, C/C++, JavaScript, HTML5, CSS3, PHP, MySQL, Scala, Shell, Matlab, Ruby, Perl, Verilog, Assembly Language.</p>
-						<p><strong>Web Frameworks/Libraries</strong>:AngularJS, BackboneJS, jQuery, Bootstrap, Firebase, Gulp, Wordpress, Codeigniter, NodeJS.</p>
-						<p><strong>Machine learning</strong>:Tensorflow, Keras, Scikit learn, Xgboost, Vowpal Wabbit, Modern neural network, Numpy, Scipy, Pandas.</p>
+						<p><strong>Languages</strong>: Java, Python, C/C++, JavaScript, HTML5, CSS3, PHP, MySQL, Scala, Shell, Matlab, Ruby, Verilog, Assembly Language.</p>
+						<p><strong>Web Frameworks/Libraries</strong>:Django, ReactJS, Redux, AngularJS, BackboneJS, Codeigniter, Laravel, jQuery, Bootstrap, Firebase, Gulp, Wordpress, Webpack, MySQL, MongoDB, SASS.</p>
+						<p><strong>Machine learning</strong>:Tensorflow, Keras, Scikit learn, Many Modern neural network, Numpy, Scipy, Pandas.</p>
 						<p><strong>Others</strong>:Apache, AWS, Wire Shark, Photoshop, Premiere Pro, Lightroom, After Effects.</p>
 
 					</div>
@@ -118,8 +118,11 @@
 		<!-- /header -->
 		<section class="projects row">
 			<header id="feature" class="col-md-12 featured-header">
-				<button id="fe-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-king"></i>My Projects</button>
-				<button id="fs-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-queen"></i>Paper and Patents</button>
+				<button id="fs-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-king"></i>Full-Stack Projects</button>
+				<button id="fe-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-eye-open"></i>Front-End Projects</button>
+				<button id="da-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-qrcode"></i>Data and AI</button>
+				<button id="op-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-briefcase"></i>Other Projects</button>
+				<button id="pp-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-queen"></i>Paper and Patents</button>
 				<button id="aw-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-pawn"></i>Prizes</button>
 				<button id="og-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-bishop"></i>Organizations</button>
 				<button id="mw-btn" class="btn btn-default text-primary"><i class="glyphicon glyphicon-knight"></i>Design works</button>
