divide four kinds

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<div class="col-xs-12 col-sm-4 text-primary">
 						<h3>Technical Skills:</h3>
 						<p><strong>Languages</strong>: Java, Python, C/C++, JavaScript, HTML5, CSS3, PHP, MySQL, Scala, Shell, Matlab, Ruby, Verilog, Assembly Language.</p>
-						<p><strong>Web Frameworks/Libraries</strong>:Django, ReactJS, Redux, AngularJS, BackboneJS, Codeigniter, Laravel, jQuery, Bootstrap, Firebase, Gulp, Wordpress, Webpack, MySQL, MongoDB, SASS.</p>
+						<p><strong>Web Frameworks/Libraries</strong>:Django, ReactJS, Redux, AngularJS, BackboneJS, ExpressJS, Codeigniter, Laravel, jQuery, Bootstrap, Firebase, Gulp, Wordpress, Webpack, MySQL, MongoDB, SASS.</p>
 						<p><strong>Machine learning</strong>:Tensorflow, Keras, Scikit learn, Many Modern neural network, Numpy, Scipy, Pandas.</p>
 						<p><strong>Others</strong>:Apache, AWS, Wire Shark, Photoshop, Premiere Pro, Lightroom, After Effects.</p>
 
