--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		<!-- primary header -->
 		<header id="about" class="row primary-header">
 			<section class="col-xs-12 about">
-				<h1 class="name-font text-center">Waha Li</h1>
+				<h1 class="name-font text-center">Tom Li</h1>
 				<h4 class="title-font text-center">Software/Full Stack Developer in Training</h4>
 				<div class="row" style="max-width: 1000px;display: flex;margin: auto;">
 					<div class="col-xs-12 col-sm-7">
@@ -99,11 +99,11 @@
 						</figure>
 						<div class="text-primary mt-2"">
 							<h3>About Me:</h3>
-							<p>I’m Waha Li, a full stack developer.</p>
+							<p>I’m Tom Li, a full stack developer.</p>
 							<p>I’m passionate about building things with code. I'd gain great pleasure if it can be widely approved. I also love try novelty things, technologies and skills which can bring new advanture to my life.
 							</p>
-							<p>I am current working in Google Cambridge Office (Boston), as a member of Stackdriver (Cloud Monitoring) team.</p>
-							<p>I got my master student of Computer Science in Lehigh University. I was student majoring in electrical and mechanical engineering so I can use a more comprehensive and innovative idea to solve most engineer problems. </p>
+							<p>I am current working at Amazon, as a member of Amazon Web Service (AWS) Elestic File System (EFS) team.</p>
+							<p>I got my master degree in Computer Science from Lehigh University and Bachelor degree in Electronic and Information engineering from Zhejiang University. I was student majoring in electrical and mechanical engineering so I can use a more comprehensive and innovative idea to solve most problems. </p>
 						</div>
 						
 					</div>
